web-view: set user-content-manager when creating related view

WebKit does not set the WebKitUserContentManager from the related view
GObject property. The WebKitUserContentManager only gets set
automatically when using the webkit_web_context_new_with_related_view
GObject API.

This means all our script message handlers (and also user CSS) were
broken in related views (views that share the same web process), e.g.
when using the Add Account feature to switch between multiple Google
accounts on Google pages.

This is probably also the cause of user complaints that sometimes
bypassing the unacceptable TLS certificate error page doesn't work.

https://bugzilla.gnome.org/show_bug.cgi?id=769627